--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,19 @@
             <svg xmlns="http://www.w3.org/2000/svg" height="30px" width="30px" viewBox="0 0 24 24"><title>menu</title><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" /></svg>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <form>
+                <div class="search-box">
+                    <div class="search-button">
+                        <svg id="search-button" xmlns="http://www.w3.org/2000/svg" height="30px" width="30px" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                    </div>
+                    <label for="location"></label>
+                    <input type="text" id="location" placeholder="Search for a city/town">
+                </div>
+            </form>
+        </section>
+    </main>
     <aside>
         <div class="settings-header">
             <h3>Settings</h3>
