Added another section tag to main; added div for temperature settings

--- a/src/template.html
+++ b/src/template.html
@@ -24,6 +24,7 @@
                 </div>
             </form>
         </section>
+        <section></section>
     </main>
     <aside>
         <div class="settings-header">
@@ -31,6 +32,21 @@
             <div class="close-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30px" width= "30px"viewBox="0 0 24 24"><title>window-close</title><path d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z" /></svg>
             </div>    
+        </div>
+        <div class="temperature-settings">
+            <h3>Temperature</h3>
+            <div class="temperature">
+                <div class="tick-box">
+                    <svg id="tick-box" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>square-rounded</title><path d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z" /></svg>
+                </div>
+                <p class="fahrenheit">Fahrenheit</p>
+            </div>
+            <div class="temperature">
+                <div class="tick-box">
+                    <svg id="tick-box" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>square-rounded</title><path d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z" /></svg>
+                </div>
+                <p class="celsius">Celsius</p>
+            </div>
         </div>
     </aside>
     <footer>
