--- a/src/template.html
+++ b/src/template.html
@@ -1,56 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>LunaWeather</h1>
-        <div class="dropdown-button">
-            <svg xmlns="http://www.w3.org/2000/svg" height="30px" width="30px" viewBox="0 0 24 24"><title>menu</title><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" /></svg>
-        </div>
+      <h1>LunaWeather</h1>
+      <div class="menu-button">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="30px"
+          width="30px"
+          viewBox="0 0 24 24"
+        >
+          <title>menu</title>
+          <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+        </svg>
+      </div>
     </header>
     <main>
-        <section>
-            <form>
-                <div class="search-box">
-                    <div class="search-button">
-                        <svg id="search-button" xmlns="http://www.w3.org/2000/svg" height="30px" width="30px" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
-                    </div>
-                    <label for="location"></label>
-                    <input type="text" id="location" placeholder="Search for a city/town">
-                </div>
-            </form>
-        </section>
-        <section></section>
+      <section>
+        <form>
+          <div class="search-box">
+            <div class="search-button">
+              <svg
+                id="search-button"
+                xmlns="http://www.w3.org/2000/svg"
+                height="30px"
+                width="30px"
+                viewBox="0 0 24 24"
+              >
+                <title>magnify</title>
+                <path
+                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+                />
+              </svg>
+            </div>
+            <label for="location"></label>
+            <input
+              type="text"
+              id="location"
+              placeholder="Search for a city/town"
+            />
+          </div>
+        </form>
+      </section>
+      <section></section>
     </main>
     <aside>
-        <div class="settings-header">
-            <h3>Settings</h3>
-            <div class="close-button">
-                <svg xmlns="http://www.w3.org/2000/svg" height="30px" width= "30px"viewBox="0 0 24 24"><title>window-close</title><path d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z" /></svg>
-            </div>    
+      <div class="settings-header">
+        <h3>Settings</h3>
+        <div class="close-settings-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="30px"
+            width="30px"
+            viewBox="0 0 24 24"
+          >
+            <title>window-close</title>
+            <path
+              d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z"
+            />
+          </svg>
         </div>
-        <div class="temperature-settings">
-            <h3>Temperature</h3>
-            <div class="temperature">
-                <div class="tick-box">
-                    <svg id="tick-box" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>square-rounded</title><path d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z" /></svg>
-                </div>
-                <p class="fahrenheit">Fahrenheit</p>
-            </div>
-            <div class="temperature">
-                <div class="tick-box">
-                    <svg id="tick-box" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>square-rounded</title><path d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z" /></svg>
-                </div>
-                <p class="celsius">Celsius</p>
-            </div>
+      </div>
+      <div class="temperature-settings">
+        <h3>Temperature</h3>
+        <div class="temperature">
+          <div class="tick-box">
+            <svg
+              id="tick-box"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>square-rounded</title>
+              <path
+                d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
+              />
+            </svg>
+          </div>
+          <p class="fahrenheit">Fahrenheit</p>
         </div>
+        <div class="temperature">
+          <div class="tick-box">
+            <svg
+              id="tick-box"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>square-rounded</title>
+              <path
+                d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
+              />
+            </svg>
+          </div>
+          <p class="celsius">Celsius</p>
+        </div>
+      </div>
     </aside>
     <footer>
-        <p>© 2024 LunaWeather</p>
+      <p>© 2024 LunaWeather</p>
     </footer>
-</body>
+  </body>
 </html>
