Added a div for the current weather, hourly weather and weekly weather

--- a/src/template.html
+++ b/src/template.html
@@ -47,7 +47,43 @@
           </div>
         </form>
       </section>
-      <section></section>
+      <section>
+        <div class="current-weather-container">
+          <div class="current-weather-header">
+            <div class="current-weather-heading">
+              <h4>Current Weather</h4>
+            </div>
+            <div class="current-time">
+              <p>12:00</p>
+            </div>
+          </div>
+          <div class="current-weather-info"></div>
+        </div>
+        <div class="hourly-weather-container">
+          <div class="hourly-weather-header">
+            <div>
+              <h4>Hourly Weather</h4>
+            </div>
+            <div>
+              <p>12:00</p>
+            </div>
+          </div>
+          <div class="hourly-weather-info"></div>
+        </div>
+      </section>
+      <section>
+        <div class="weekly-weather-container">
+          <div class="weekly-weather-header">
+            <div>
+              <h4>7-Day Weather Forecast</h4>
+            </div>
+            <div>
+              <p>12:00</p>
+            </div>
+          </div>
+          <div class="weekly-weather-info"></div>
+        </div>
+      </section>
     </main>
     <aside>
       <div class="settings-header">
