Added three svg images to animated folder; invoked hideWorldWeatherInfo() and renderPrecipitationInfo() in index.js; created function in UI.js to render/hide current weather info and render/hide world weather info; created functions to render precipitation info and icon

--- a/src/template.html
+++ b/src/template.html
@@ -211,8 +211,7 @@
                   <div class="hour">
                     <p>10</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T11">
@@ -226,32 +225,21 @@
                   <div class="hour">
                     <p>12</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T13">
                   <div class="hour">
                     <p>13</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T14">
                   <div class="hour">
                     <p>14</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </                              stroke-linejoin="round"
-                              stroke-width="1.2"
-                              transform="translate(-20,-11)"
-                            />
-                          </g>
-                        </g>
-                      </g>
-                    </svg>
-                  </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T15">
@@ -265,32 +253,21 @@
                   <div class="hour">
                     <p>16</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T17">
                   <div class="hour">
                     <p>17</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T18">
                   <div class="hour">
                     <p>18</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </                              stroke-linejoin="round"
-                              stroke-width="1.2"
-                              transform="translate(-20,-11)"
-                            />
-                          </g>
-                        </g>
-                      </g>
-                    </svg>
-                  </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T19">
@@ -304,32 +281,28 @@
                   <div class="hour">
                     <p>20</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T21">
                   <div class="hour">
                     <p>21</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T22">
                   <div class="hour">
                     <p>22</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
                 <div id="T23">
                   <div class="hour">
                     <p>23</p>
                   </div>
-                  <div class="hour-weather-icon">
-                                      </div>
+                  <div class="hour-weather-icon"></div>
                   <div class="hour-temperature"></div>
                 </div>
               </div>
@@ -406,57 +379,281 @@
             </div>
           </div>
         </div>
-        <div class="random-weather-container">
-          <div class="random-weather-header">
+        <div class="precipitation-container">
+          <div class="precipitation-header">
+            <h4>Precipitation</h4>
+          </div>
+          <div class="precipitation-info">
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>TODAY</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>MON</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>TUE</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>WED</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>THU</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>FRI</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+            <div class="precipitation">
+              <div class="precipitation-day">
+                <p>SAT</p>
+              </div>
+              <div class="precipitation-icon"></div>
+              <div class="precipitation-chance">
+                <p>20%</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="sun-container">
+          <div class="sun-header">
+            <h4>Sunrise & Sunset</h4>
+          </div>
+          <div class="sun-info">
+            <div class="sunrise">
+              <div class="sunrise-icon">
+                <svg
+                  height="80px"
+                  width="80px"
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 511.984 511.984"
+                  xml:space="preserve"
+                >
+                  <g>
+                    <path
+                      style="fill: #f6bb42"
+                      d="M95.998,282.643H32c-5.891,0-10.664,4.781-10.664,10.688c0,5.875,4.773,10.656,10.664,10.656h63.998
+		c5.89,0,10.663-4.781,10.663-10.656C106.661,287.425,101.888,282.643,95.998,282.643z"
+                    />
+                    <path
+                      style="fill: #f6bb42"
+                      d="M479.985,282.643h-63.997c-5.891,0-10.656,4.781-10.656,10.672s4.766,10.672,10.656,10.672h63.997
+		c5.891,0,10.656-4.781,10.656-10.656C490.641,287.425,485.876,282.643,479.985,282.643z"
+                    />
+                  </g>
+                  <path
+                    style="fill: #ffce54"
+                    d="M406.832,127.39l-45.25,45.257c-4.155,4.164-4.155,10.914,0,15.077
+	c4.156,4.172,10.922,4.172,15.094,0l45.249-45.248c4.156-4.164,4.156-10.922,0-15.086
+	C417.769,123.226,411.004,123.226,406.832,127.39z"
+                  />
+                  <path
+                    style="fill: #f6bb42"
+                    d="M245.328,69.33v63.998c0,5.891,4.773,10.664,10.664,10.664c5.891,0,10.664-4.773,10.664-10.664V69.33
+	c0-5.89-4.773-10.671-10.664-10.671S245.328,63.44,245.328,69.33z"
+                  />
+                  <g>
+                    <path
+                      style="fill: #ffce54"
+                      d="M90.068,142.476l45.248,45.256c4.164,4.164,10.922,4.164,15.086,0
+		c4.164-4.163,4.164-10.921,0-15.085l-45.257-45.257c-4.164-4.164-10.913-4.164-15.077,0
+		C85.896,131.555,85.896,138.312,90.068,142.476z"
+                    />
+                    <path
+                      style="fill: #ffce54"
+                      d="M146.426,335.985c-5.305-13.562-7.984-27.89-7.984-42.654c0-64.826,52.732-117.559,117.551-117.559
+		c64.812,0,117.559,52.732,117.559,117.559c0,14.765-2.688,29.093-8,42.654H146.426z"
+                    />
+                  </g>
+                  <path
+                    style="fill: #f6bb42"
+                    d="M255.992,165.1c-70.811,0-128.215,57.405-128.215,128.23c0,19.03,4.148,37.076,11.586,53.311h233.25
+	c7.438-16.234,11.594-34.28,11.594-53.311C384.207,222.506,326.803,165.1,255.992,165.1z M358.02,325.329H153.972
+	c-3.234-10.296-4.867-21.014-4.867-31.998c0-28.562,11.116-55.405,31.311-75.591c20.188-20.188,47.022-31.304,75.576-31.304
+	c28.562,0,55.39,11.116,75.576,31.304c20.202,20.186,31.311,47.029,31.311,75.591C362.879,304.315,361.238,315.033,358.02,325.329z"
+                  />
+                  <path
+                    style="fill: #ed5564"
+                    d="M286.163,393.733l-22.632-22.624l0,0c-1.938-1.938-4.593-3.125-7.539-3.125l0,0
+	c-2.938,0-5.602,1.188-7.531,3.109l-0.008,0.016l-22.632,22.624c-4.164,4.156-4.164,10.906,0,15.094
+	c2.086,2.063,4.813,3.109,7.547,3.109c2.727,0,5.461-1.047,7.538-3.109l4.422-4.438v38.249c0,5.906,4.773,10.687,10.664,10.687l0,0
+	c5.891,0,10.664-4.78,10.664-10.687v-38.249l4.422,4.438c2.07,2.078,4.82,3.125,7.539,3.125c2.733,0,5.468-1.047,7.546-3.125
+	C290.335,404.655,290.335,397.889,286.163,393.733z"
+                  />
+                  <path
+                    style="fill: #656d78"
+                    d="M501.328,325.329H10.664C4.773,325.329,0,330.095,0,335.985s4.773,10.656,10.664,10.656h490.664
+	c5.875,0,10.656-4.766,10.656-10.656S507.203,325.329,501.328,325.329z"
+                  />
+                </svg>
+              </div>
+              <div class="sunrise-time">
+                <p>08:00</p>
+              </div>
+            </div>
+            <div class="sunset">
+              <div class="sunset-icon">
+                <svg
+                  height="80px"
+                  width="80px"
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 512 512"
+                  xml:space="preserve"
+                >
+                  <g>
+                    <path
+                      style="fill: #6e76e5"
+                      d="M318.061,387.879H256h-62.061c-12.853,0-23.273,10.418-23.273,23.273
+		c0,12.853,10.42,23.273,23.273,23.273H256h62.061c12.853,0,23.273-10.42,23.273-23.273
+		C341.333,398.297,330.913,387.879,318.061,387.879z"
+                    />
+                    <path
+                      style="fill: #6e76e5"
+                      d="M488.727,201.697h-62.768h-24.612h-25.142H256H135.795h-25.142H86.041H23.273
+		C10.42,201.697,0,212.115,0,224.97c0,12.853,10.42,23.273,23.273,23.273h80.643h0.13H256h232.727
+		c12.853,0,23.273-10.42,23.273-23.273C512,212.115,501.58,201.697,488.727,201.697z"
+                    />
+                  </g>
+                  <path
+                    style="fill: #ff6243"
+                    d="M256,77.576c-78.026,0-146.651,51.181-169.959,124.121h24.612h25.142H256h120.205h25.142h24.612
+	C402.648,128.771,333.987,77.576,256,77.576z"
+                  />
+                  <path
+                    style="fill: #6e76e5"
+                    d="M426.667,294.788H302.545c-12.853,0-23.273,10.418-23.273,23.273
+	c0,12.853,10.42,23.273,23.273,23.273h124.121c12.853,0,23.273-10.42,23.273-23.273
+	C449.939,305.206,439.519,294.788,426.667,294.788z"
+                  />
+                  <path
+                    style="fill: #b3d8f4"
+                    d="M104.046,248.242h-0.13c0.02,0,0.04,0.003,0.061,0.003
+	C103.998,248.246,104.023,248.242,104.046,248.242z"
+                  />
+                  <path
+                    style="fill: #ff0c38"
+                    d="M86.041,201.697h24.612h25.142H256V77.576l0,0C177.974,77.576,109.349,128.757,86.041,201.697z"
+                  />
+                  <g>
+                    <path
+                      style="fill: #424ede"
+                      d="M135.795,201.697h-25.142H86.041H23.273C10.42,201.697,0,212.115,0,224.97
+		c0,12.853,10.42,23.273,23.273,23.273h80.643h0.13H256v-46.545H135.795z"
+                    />
+                    <path
+                      style="fill: #424ede"
+                      d="M170.667,411.151c0,12.853,10.42,23.273,23.273,23.273H256v-46.545h-62.061
+		C181.087,387.879,170.667,398.297,170.667,411.151z"
+                    />
+                    <path
+                      style="fill: #424ede"
+                      d="M62.061,318.061c0,12.853,10.42,23.273,23.273,23.273h124.121c12.853,0,23.273-10.42,23.273-23.273
+		c0-12.854-10.42-23.273-23.273-23.273H85.333C72.481,294.788,62.061,305.206,62.061,318.061z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <div class="sunset-time">
+                <p>20:00</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="world-weather">
+        <div class="world-weather-container">
+          <div class="world-weather-header">
             <h4>Weather Across The World</h4>
           </div>
-          <div>
-            <div class="city">
-              <p>New York</p>
+          <div class="world-cities">
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>New York</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
-          </div>
-          <div>
-            <div class="city">
-              <p>London</p>
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>London</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
-          </div>
-          <div>
-            <div class="city">
-              <p>Sydney</p>
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>Sydney</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
-          </div>
-          <div>
-            <div class="city">
-              <p>Moscow</p>
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>Tokyo</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
-          </div>
-          <div>
-            <div class="city">
-              <p>Berlin</p>
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>Berlin</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
-          </div>
-          <div>
-            <div class="city">
-              <p>Tokyo</p>
+            <div class="world-city">
+              <div class="world-city-name">
+                <p>Los Angeles</p>
+              </div>
+              <div class="world-city-icon"></div>
+              <div class="world-city-temperature"></div>
+              <div class="world-city-info"></div>
             </div>
-            <div class="random-city-weather-icon"></div>
-            <div class="random-city-weather-temperature"></div>
-            <div class="random-city-weather-info"></div>
           </div>
         </div>
       </section>
