Added class for wind speed, uv index and humidity; added p element for humidity unit

--- a/src/template.html
+++ b/src/template.html
@@ -82,27 +82,28 @@
               <div class="wind">
                 <p>Wind</p>
                 <div class="current-weather-detail">
-                  <p>25</p>
+                  <p class="current-wind-speed">25</p>
                   <p id="wind-unit">KM/H</p>
                 </div>
               </div>
               <div class="uv-index">
                 <p>UV Index</p>
                 <div class="current-weather-detail">
-                  <p>2</p>
+                  <p class="current-uv-index">2</p>
                 </div>
               </div>
               <div class="humidity">
                 <p>Humidity</p>
                 <div class="current-weather-detail">
-                  <p>80%</p>
+                  <p class="current-humidity">80</p>
+                  <p class="humidity-unit">%</p>
                 </div>
               </div>
               <div id="feels-like-temperature">
                 <p>Feels like</p>
                 <div class="current-weather-detail">
-                  <p>8°</p>
-                  <p>C</p>
+                  <p class="current-feels-like-temperature">8°</p>
+                  <p class="feels-like-temp-unit">C</p>
                 </div>
               </div>
             </div>
